# qi

./: .gitignore  .gitmodules  README.md  pyproject.toml  quantization.md  setup.py
configs/: deploy_real_rtc.yaml  real_bot.yaml  sim_libero.yaml  sim_libero_plus.yaml  sim_robotwin.yaml  train.yaml
configs/data/: libero_2cam.yaml  libero_dataset_stats.json  real_cleaning_2task.yaml  robotwin.yaml
configs/model/: fastwam.yaml  fastwam_idm.yaml  fastwam_joint.yaml
configs/task/: libero_uncond_2cam224_1e-4.yaml  real_cleaning_uncond_3cam_384_1e-4.yaml
docker/: Dockerfile.4090  Dockerfile.4090.app  Dockerfile.base  Dockerfile.epfl  Dockerfile.epfl.app  Dockerfile.jetson
docs/: 4090.md  README.md  common.md  deploy_real_bot.md  deploy_real_rtc.md  epfl.md  jetson.md  libero.md  quantization.md  robotwin.md
scripts/: deploy_real_rtc_wam.py  dry_run.py  preprocess_action_dit_backbone.py  serve_policy.py
src/qi/: __init__.py  api.py  runtime.py
src/qi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/qi/deployment/: robot_runtime.py  rtc_buffer.py  (+3 more)
tests/: collect_awq_cache.py  collect_awq_stats.py  deploy_real_rtc.py  precompute_text_embedding.py  precompute_text_embeds.py  quantize_checkpoint.py  test_dry_run.py  test_int4_w4a16_backend.py  test_int8_w8a8_config.py
tests/data/: state.json
tests/libero/: README.md  eval_libero_single.py  libero_bootstrap.py  libero_utils.py  run_libero_manager.py  run_libero_parallel_test.sh
tests/real_robot/: deploy_real_rtc.py
tests/robotwin/: README.md  eval_robotwin_single.py  run_robotwin_manager.py
(+51 files in other folders)
