[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qi"
version = "0.1.0"
description = "A High-Performance Real-Time Inference Engine for World Action Models"
requires-python = ">=3.10"
dependencies = [
  "accelerate==1.12.0",
  "av==16.0.1",
  "boto3==1.35.99",
  "datasets==3.6.0",
  "deepspeed==0.18.5",
  "einops==0.8.1",
  "gitpython==3.1.45",
  "huggingface-hub>=0.29",
  "hydra-core==1.3.2",
  "imageio==2.37.0",
  "imageio-ffmpeg==0.6.0",
  "jsonlines==4.0.0",
  "modelscope==1.34.0",
  "omegaconf==2.3.0",
  "packaging==25.0",
  "pandas>=2.2",
  "pillow==12.0.0",
  "pyAgxArm @ git+https://github.com/agilexrobotics/pyAgxArm.git",
  "pyarrow==23.0.0",
  "regex==2025.11.3",
  "rich==14.2.0",
  "safetensors==0.5.3",
  "rospkg==1.5.0",
  "termcolor==2.5.0",
  "tqdm==4.66.5",
  "transformers==4.49.0",
  "typing-extensions==4.15.0",
  "wandb==0.23.1",
  "numpy>=1.26,<3",
  "sapien==3.0.3",
  "open3d==0.19.0",
  "h5py==3.16.0",
  "gymnasium==1.3.0",
  "mplib==0.2.1",
  "warp-lang==1.12.0",
  "toppra==0.6.3"
  
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["qi*"]
